# fitch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: dashboard.json  prometheus.yml
src/: backend_pre_start.py  main.py  models.py
src/alembic/: env.py
src/alembic/versions/: 45d90737267a_initial.py
src/api/: deps.py  main.py
src/api/routes/: votes.py
src/core/: config.py  db.py  security.py
